2014/12/01 (version 1.40)
- Fixed task properties popping up when not expected.
- Focus on the query bar when the search window pops up.

2014/11/27 (version 1.38)
- Fixed menu behavior when using GtkStatusIcon.
- Added icons to the tray menu.
- Use single menu code for both indicator types.
- Updated package description.
- Search dialog now shows active tasks first.
- Search dialog now always shows active tasks, even when not matching the query.
- Single instance mode, helps using system shortcuts.

2014/11/24 (version 1.31)
- Changed sorting order of tasks in the tray menu: now showing
  10 recent tasks, not most urgent.
- Can now pull tasks using Gtk status icon.

2014/11/23 (version 1.29)
- Added a tray icon for systems that don't have appindicator.
- Fixed menu items not working.

2014/02/06 (version 1.27)
- Better handling of unknown database contents.

2014/02/05 (version 1.26)
- Search now searches within the whole description, not only stripped-out
  versions, which makes it possible to find tasks by URL, when they have
  some meaning (e.g., Jira includes remote project name sometimes).
- Search now also searches uuids.

2014/01/13 (version 1.24)
- Fixed stripping URLs from menu.

2014/01/10 (version 1.23)
- Fixed wrong notes folder.

2014/01/09 (version 1.22)
- Fixed a bug with tasks that have no project.

2013/12/14 (version 1.21)
- Improved the search window to require all entered words to be present
  in either project or description fields of a task.

2013/12/05 (version 1.20)
- Fixed a crash when there's no database.
- Special tag "pin" replaced with "next".
- Can now finish and restart tasks using the search window popup menu.
- Can now open linked pages from the search window popup menu.

2013/11/27 (version 1.17)
- Added a popup menu to start/stop tasks in the search dialog.

2013/11/15 (version 1.16)
- Calling bugwarrior from menu no longer blocks the UI.

2013/11/12 (version 1.15)
- Active tasks are shown with bold font in the search dialog.
