@@ -1,4 +1,4 @@
-VERSION=1.40
+VERSION=1.41
 PYTHON=python
 
 test:
