@@ -1,3 +1,6 @@
+2014/12/02 (version 1.41)
+- Pulling tasks in a GUI window, not terminal.
+
 2014/12/01 (version 1.40)
 - Fixed task properties popping up when not expected.
 - Focus on the query bar when the search window pops up.
